--- a/educationPortal/package.json
+++ b/educationPortal/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "web-dev",
+  "name": "PassportJS",
   "version": "1.0.0",
-  "description": "Web Dev at Northeastern University",
-  "main": "server.js",
-  "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.17.2",
-    "cookie-parser": "^1.4.3",
-    "ejs": "^2.5.6",
-    "express": "^4.13.4",
-    "express-session": "^1.15.3",
-    "mongojs": "^2.4.0",
-    "mongoose": "^4.4.15",
-    "multer": "^1.3.0",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "q": "^1.5.0"
-  },
-  "devDependencies": {},
+  "description": "Simple PassportJS MEAN Web App",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Jose G. Annunziato",
-  "license": "ISC"
+  "author": "Jose Annunziato",
+  "license": "ISC",
+  "dependencies": {
+    "angular-rating": "^3.0.3",
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.3.4",
+    "express": "^4.15.3",
+    "express-session": "^1.10.4",
+    "http": "0.0.0",
+    "mobile-angular-ui": "^1.3.4",
+    "mongodb-backup": "^1.6.9",
+    "mongodb-restore": "^1.6.2",
+    "mongojs": "^2.4.0",
+    "mongoose": "^4.4.10",
+    "multer": "^1.1.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "q": "^1.5.0",
+    "socket.io": "^1.7.3",
+    "twilio": "^2.9.2"
+  }
 }
