--- a/educationPortal/package.json
+++ b/educationPortal/package.json
@@ -27,6 +27,7 @@
     "passport-local": "^1.0.0",
     "q": "^1.5.0",
     "socket.io": "^1.7.3",
-    "twilio": "^2.9.2"
+    "twilio": "^2.9.2",
+    "bcrypt":"*"
   }
 }
