--- a/educationPortal/package.json
+++ b/educationPortal/package.json
@@ -27,7 +27,6 @@
     "passport-local": "^1.0.0",
     "q": "^1.5.0",
     "socket.io": "^1.7.3",
-    "twilio": "^2.9.2",
-    "bcrypt":"*"
+    "twilio": "^2.9.2"
   }
 }
