--- a/educationPortal/package.json
+++ b/educationPortal/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "angular-rating": "^3.0.3",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.3.4",
     "express": "^4.15.3",
